--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = example_package-caiomsouza
+name = python-package-example
 version = 0.0.1
 author = Caio Moreno
 author_email = caiomsouza@gmail.com
